@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-02T00:59:41Z",
+  "timestamp" : "2024-05-02T08:17:24Z",
   "count_outdated" : 2455,
   "uniques_outdated" : 787,
-  "count" : 2465,
-  "uniques" : 794,
+  "count" : 2466,
+  "uniques" : 795,
   "views" : [
     {
       "timestamp": "2024-04-20T00:00:00Z",
@@ -55,6 +55,15 @@
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-05-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
