@@ -1,6 +1,6 @@
 {
-  "count": 10,
-  "uniques": 7,
+  "count": 11,
+  "uniques": 8,
   "views": [
     {
       "timestamp": "2024-04-20T00:00:00Z",
@@ -30,6 +30,11 @@
     {
       "timestamp": "2024-04-30T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-05-02T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
